force-app/main/default/objects/Receipt_Downtime_Record__c/Receipt_Downtime_Record__c.object-meta.xml
<CustomObject>
    <label>Receipt (Downtime Record)</label>
    <nameField>
        <label>Receipt (Downtime Record) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receipt (Downtime Records)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>