force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Advance_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Advance_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Advance Receipt Created</label>
    <type>Checkbox</type>
</CustomField>