force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Audit_Aging__c.field-meta.xml
<CustomField>
    <fullName>Audit_Aging__c</fullName>
    <label>Audit Ageing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>