force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Audit_Submitter_s_Comments__c.field-meta.xml
<CustomField>
    <fullName>Audit_Submitter_s_Comments__c</fullName>
    <label>Audit Submitter’s Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>