force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Auto_Calculate_Service_Tax__c.field-meta.xml
<CustomField>
    <fullName>Auto_Calculate_Service_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Calculate Service Tax</label>
    <type>Checkbox</type>
</CustomField>