force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient Fund</fullName>
            </value>
            <value>
                <fullName>Signature Irregular</fullName>
            </value>
            <value>
                <fullName>Cheque Replacement</fullName>
            </value>
            <value>
                <fullName>Difference in Amount/Words</fullName>
            </value>
            <value>
                <fullName>Dormant / Closed Account</fullName>
            </value>
            <value>
                <fullName>PR Rejection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>