force-app/main/default/objects/Receipt_Downtime_Record__c/fields/CheckReceipt__c.field-meta.xml
<CustomField>
    <fullName>CheckReceipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckReceipt</label>
    <type>Checkbox</type>
</CustomField>