force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Consider_for_Paid_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Consider_for_Paid_Percentage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consider for Paid Percentage</label>
    <type>Checkbox</type>
</CustomField>