force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Customer_SOA__c.field-meta.xml
<CustomField>
    <fullName>Customer_SOA__c</fullName>
    <formula>Booking__r.SOA_link__c</formula>
    <label>Customer SOA</label>
    <type>Text</type>
</CustomField>