force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Discount_on_Dues__c.field-meta.xml
<CustomField>
    <fullName>Discount_on_Dues__c</fullName>
    <label>Discount on Dues</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>