force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Drawee_Bank_If_Others__c.field-meta.xml
<CustomField>
    <fullName>Drawee_Bank_If_Others__c</fullName>
    <label>Drawee Bank(If Others)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>