force-app/main/default/objects/Receipt_Downtime_Record__c/fields/FOREX__c.field-meta.xml
<CustomField>
    <fullName>FOREX__c</fullName>
    <label>Forex Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>