force-app/main/default/objects/Receipt_Downtime_Record__c/fields/IsTDS_And_NoDemandRaised__c.field-meta.xml
<CustomField>
    <fullName>IsTDS_And_NoDemandRaised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTDS And NoDemandRaised</label>
    <type>Checkbox</type>
</CustomField>