force-app/main/default/objects/Receipt_Downtime_Record__c/fields/LP_Waiver__c.field-meta.xml
<CustomField>
    <fullName>LP_Waiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LP Waiver</label>
    <referenceTo>LP_Waiver__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts15</relationshipName>
    <type>Lookup</type>
</CustomField>