force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Old_Receipt_No__c.field-meta.xml
<CustomField>
    <fullName>Old_Receipt_No__c</fullName>
    <label>Old Receipt No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>