force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Opportunity_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Email_Id__c</fullName>
    <label>Opportunity Email Id</label>
    <type>Email</type>
</CustomField>