force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Parent_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Parent_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Advance Receipts</relationshipLabel>
    <relationshipName>Receipts18</relationshipName>
    <type>Lookup</type>
</CustomField>