force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Payment_Clearance_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Clearance_Date__c</fullName>
    <label>Payment Clearance Date</label>
    <type>Date</type>
</CustomField>