force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Payment_Towards__c.field-meta.xml
<CustomField>
    <fullName>Payment_Towards__c</fullName>
    <label>Payment Towards</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Account</fullName>
            </value>
            <value>
                <fullName>ESCROW Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>