force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason for cheque rejection</label>
    <type>TextArea</type>
</CustomField>