force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Receipt_Clearance_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Clearance_Date__c</fullName>
    <label>Receipt Clearance Date</label>
    <type>DateTime</type>
</CustomField>