force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Receipt_is_created_by_Automation__c.field-meta.xml
<CustomField>
    <fullName>Receipt_is_created_by_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt is created by Automation</label>
    <type>Checkbox</type>
</CustomField>