force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Receipt_No_Manual__c.field-meta.xml
<CustomField>
    <fullName>Receipt_No_Manual__c</fullName>
    <label>Receipt No (Manual)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>