force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Tax_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Tax_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAT Receipt</label>
    <type>Checkbox</type>
</CustomField>