force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Token_Amount_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Token_Amount_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Token Amount Receipt</label>
    <type>Checkbox</type>
</CustomField>