force-app/main/default/objects/Receipt_Downtime_Record__c/fields/Towards_Other_Charges_Amount__c.field-meta.xml
<CustomField>
    <fullName>Towards_Other_Charges_Amount__c</fullName>
    <formula>IF(Payment_Request__c != null, Payment_Request__r.Towards_Other_Charges_Amount__c, Requester__r.Towards_Other_Charges_Amount__c)</formula>
    <label>Towards Other Charges Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>