force-app/main/default/objects/Receipt_Downtime_Record__c/fields/WebLink__c.field-meta.xml
<CustomField>
    <fullName>WebLink__c</fullName>
    <label>WebLink</label>
    <type>Url</type>
</CustomField>