force-app/main/default/objects/Receipt_Downtime_Record__c/fields/X2_DLD_Fees_Wavier_Receipt__c.field-meta.xml
<CustomField>
    <fullName>X2_DLD_Fees_Wavier_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2 % DLD Fees Wavier Receipt</label>
    <type>Checkbox</type>
</CustomField>